@@ -8,6 +8,8 @@ Version 1.7.9+svn:
 
  * User interface:
    * Don't reserve space for scrollbars in message dialogs.
+   * Ctrl-f for fullscreen works again in the MP lobby.
+ 
  * Units
    * Decreased the speed of the dwarvish scout line by one.
    * Reduced the movecosts over frozen terrain for the dwarvish scout line.	
