@@ -3,6 +3,7 @@ Version 1.7.9+svn:
    * Updated translations: Hungarian, Italian, Latvian, Russian, Serbian
  * User interface:
    * Don't reserve space for scrollbars in message dialogs
+   * Ctrl-f for fullscreen works again in the MP lobby (bug #14759)
  * WML Engine:
    * Fix bug #14859: [time_area] created by event are not saved.
  * Miscellaneous and bugfixes:
